--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maaz Amjad - Academic Profile</title>
+    <title>Alvin Hossain</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         * {
@@ -228,7 +228,7 @@
         <div class="profile-section">
             <div class="profile-sidebar">
                 <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
-                <h1>Maaz Amjad</h1>
+                <h1>Alvin Hossain</h1>
                 <p class="interests">Interests in AI, Human Computer Interaction.</p>
                 <div class="social-links">
                     <a href="#" class="social-link location">
