--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maaz Amjad - Academic Profile</title>
+    <title>Alvin Hossain - Academic Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         * {
@@ -218,7 +218,7 @@
 <body>
     <div class="container">
         <nav>
-            <a href="index.html" class="name-title">Maaz Amjad</a>
+            <a href="index.html" class="name-title">Alvin Hossain</a>
             <div class="nav-links">
                 <a href="projects.html">Projects</a>
                 <a href="files/Maaz_cv.pdf" target="_blank">CV</a>
@@ -228,7 +228,7 @@
         <div class="profile-section">
             <div class="profile-sidebar">
                 <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
-                <h1>Maaz Amjad</h1>
+                <h1>Alvin Hossain</h1>
                 <p class="interests">Interests in AI, Human Computer Interaction.</p>
                 <div class="social-links">
                     <a href="#" class="social-link location">
@@ -239,15 +239,15 @@
                         <img src="images/logo.png" alt="TTU Logo" class="ttu-logo">
                         Texas Tech University
                     </a>
-                    <a href="mailto:maaz.amjad@ttu.edu" class="social-link email">
+                    <a href="mailto:alvin.hossain@ttu.edu" class="social-link email">
                         <i class="fas fa-envelope"></i>
                         Email
                     </a>
-                    <a href="https://github.com/MaazAmjad" class="social-link github" target="_blank">
+                    <a href="https://github.com/alvin13" class="social-link github" target="_blank">
                         <i class="fab fa-github"></i>
                         Github
                     </a>
-                    <a href="https://www.linkedin.com/in/maazmjad/" class="social-link linkedin" target="_blank">
+                    <a href="https://www.linkedin.com/in/alvin13/" class="social-link linkedin" target="_blank">
                         <i class="fab fa-linkedin"></i>
                         LinkedIn
                     </a>
